# Basalt

./: Basalt.pro  CMakeLists.txt  README.md  main.cpp
interface/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
interface/createNewProject/: createnewproject.cpp  createnewproject.hpp  createnewproject.ui
interface/createProjectFile/: createprojectfile.cpp  createprojectfile.hpp
interface/loadProject/: loadproject.cpp  loadproject.hpp  loadproject.ui
interface/newProject/: newproject.cpp  newproject.hpp  newproject.ui
methods/FLDAPanel/: fldapanel.cpp  fldapanel.hpp  fldapanel.ui
methods/KFDAPanel/: kfdapanel.cpp  kfdapanel.hpp  kfdapanel.ui
methods/include/: common.hpp  dataloader.hpp  flda.hpp  kernel.hpp  kfda.hpp
methods/src/: common.cpp  dataloader.cpp  flda.cpp  kernel.cpp  kfda.cpp
